Licence rebuilding and reformatting.