@@ -1,23 +1,42 @@
+/*-
+ * ========================LICENSE_START=================================
+ * jgea-core
+ * %%
+ * Copyright (C) 2018 - 2023 Eric Medvet
+ * %%
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * =========================LICENSE_END==================================
+ */
 
 package io.github.ericmedvet.jgea.core.listener;
 
 import io.github.ericmedvet.jgea.core.util.Misc;
 import io.github.ericmedvet.jgea.core.util.Pair;
 import io.github.ericmedvet.jgea.core.util.StringUtils;
-
 import java.io.PrintStream;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+
 public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
 
-  private final static String COLOR_RESET = "\u001B[0m";
-  private final static String COLOR_DOWN = "\u001B[31m";
-  private final static String COLOR_UP = "\u001B[32m";
-  private final static String COLOR_SAME = "\u001B[33m";
-  private final static String COLOR_NOT_RELEVANT = "\033[0;90m";
+  private static final String COLOR_RESET = "\u001B[0m";
+  private static final String COLOR_DOWN = "\u001B[31m";
+  private static final String COLOR_UP = "\u001B[32m";
+  private static final String COLOR_SAME = "\u001B[33m";
+  private static final String COLOR_NOT_RELEVANT = "\033[0;90m";
 
-  private final static String SEP = " ";
+  private static final String SEP = " ";
 
   private final List<Pair<? extends NamedFunction<? super E, ?>, Integer>> ePairs;
   private final List<Pair<? extends NamedFunction<? super K, ?>, Integer>> kPairs;
@@ -30,7 +49,8 @@ public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
   private final String header;
   private final String legend;
 
-  public TabularPrinter(List<NamedFunction<? super E, ?>> eFunctions, List<NamedFunction<? super K, ?>> kFunctions) {
+  public TabularPrinter(
+      List<NamedFunction<? super E, ?>> eFunctions, List<NamedFunction<? super K, ?>> kFunctions) {
     this(eFunctions, kFunctions, System.out, 10, true, true, true, true);
   }
 
@@ -42,42 +62,62 @@ public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
       boolean showLegend,
       boolean showVariation,
       boolean useColors,
-      boolean robust
-  ) {
-    eFunctions = robust?eFunctions.stream().map(NamedFunction::robust).toList():eFunctions;
-    kFunctions = robust?kFunctions.stream().map(NamedFunction::robust).toList():kFunctions;
-    ePairs = eFunctions.stream().map(f -> Pair.of(
-        f,
-        Math.max(StringUtils.collapse(f.getName()).length(), StringUtils.formatSize(f.getFormat()))
-    )).collect(Collectors.toList());
-    kPairs = kFunctions.stream().map(f -> Pair.of(
-        f,
-        Math.max(StringUtils.collapse(f.getName()).length(), StringUtils.formatSize(f.getFormat()))
-    )).collect(Collectors.toList());
+      boolean robust) {
+    eFunctions = robust ? eFunctions.stream().map(NamedFunction::robust).toList() : eFunctions;
+    kFunctions = robust ? kFunctions.stream().map(NamedFunction::robust).toList() : kFunctions;
+    ePairs =
+        eFunctions.stream()
+            .map(
+                f ->
+                    Pair.of(
+                        f,
+                        Math.max(
+                            StringUtils.collapse(f.getName()).length(),
+                            StringUtils.formatSize(f.getFormat()))))
+            .collect(Collectors.toList());
+    kPairs =
+        kFunctions.stream()
+            .map(
+                f ->
+                    Pair.of(
+                        f,
+                        Math.max(
+                            StringUtils.collapse(f.getName()).length(),
+                            StringUtils.formatSize(f.getFormat()))))
+            .collect(Collectors.toList());
     this.ps = ps;
     this.headerInterval = headerInterval;
     this.showLegend = showLegend;
     this.showVariation = showVariation;
     this.useColors = useColors;
-    List<String> kHeaders = kPairs.stream().map(p -> StringUtils.justify(
-        StringUtils.collapse(p.first().getName()),
-        p.second()
-    )).toList();
-    List<String> eHeaders = ePairs.stream().map(p -> StringUtils.justify(
-        StringUtils.collapse(p.first().getName()),
-        p.second()
-    ) + (showVariation ? " " : "")).toList();
+    List<String> kHeaders =
+        kPairs.stream()
+            .map(p -> StringUtils.justify(StringUtils.collapse(p.first().getName()), p.second()))
+            .toList();
+    List<String> eHeaders =
+        ePairs.stream()
+            .map(
+                p ->
+                    StringUtils.justify(StringUtils.collapse(p.first().getName()), p.second())
+                        + (showVariation ? " " : ""))
+            .toList();
     header = String.join(SEP, Misc.concat(List.of(kHeaders, eHeaders)));
-    int w = ePairs.stream().mapToInt(p -> StringUtils.collapse(p.first().getName()).length()).max().orElse(1);
-    legend = "Legend:\n" + Misc.concat(List.of(kPairs, ePairs))
-        .stream()
-        .map(p -> String.format(
-            "%" + w + "." + w + "s → %s [%s]",
-            StringUtils.collapse(p.first().getName()),
-            p.first().getName(),
-            p.first().getFormat()
-        ))
-        .collect(Collectors.joining("\n"));
+    int w =
+        ePairs.stream()
+            .mapToInt(p -> StringUtils.collapse(p.first().getName()).length())
+            .max()
+            .orElse(1);
+    legend =
+        "Legend:\n"
+            + Misc.concat(List.of(kPairs, ePairs)).stream()
+                .map(
+                    p ->
+                        String.format(
+                            "%" + w + "." + w + "s → %s [%s]",
+                            StringUtils.collapse(p.first().getName()),
+                            p.first().getName(),
+                            p.first().getFormat()))
+                .collect(Collectors.joining("\n"));
   }
 
   @Override
@@ -86,9 +126,15 @@ public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
       ps.println(legend);
     }
     List<?> fixedValues = kPairs.stream().map(p -> p.first().apply(k)).toList();
-    final String fixedS = IntStream.range(0, kPairs.size())
-        .mapToObj(i -> format(fixedValues.get(i), kPairs.get(i).first().getFormat(), kPairs.get(i).second()))
-        .collect(Collectors.joining(SEP));
+    final String fixedS =
+        IntStream.range(0, kPairs.size())
+            .mapToObj(
+                i ->
+                    format(
+                        fixedValues.get(i),
+                        kPairs.get(i).first().getFormat(),
+                        kPairs.get(i).second()))
+            .collect(Collectors.joining(SEP));
     return new Listener<>() {
       final Object[] lastValues = new Object[ePairs.size()];
       final Object[] secondLastValues = new Object[ePairs.size()];
@@ -97,17 +143,23 @@ public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
       @Override
       public void listen(E e) {
         List<?> values = ePairs.stream().map(p -> p.first().apply(e)).toList();
-        String s = IntStream.range(0, ePairs.size()).mapToObj(i -> format(
-            values.get(i),
-            lastValues[i],
-            secondLastValues[i],
-            ePairs.get(i).first().getFormat(),
-            ePairs.get(i).second()
-        )).collect(Collectors.joining(SEP));
-        IntStream.range(0, ePairs.size()).forEach(i -> {
-          secondLastValues[i] = lastValues[i];
-          lastValues[i] = values.get(i);
-        });
+        String s =
+            IntStream.range(0, ePairs.size())
+                .mapToObj(
+                    i ->
+                        format(
+                            values.get(i),
+                            lastValues[i],
+                            secondLastValues[i],
+                            ePairs.get(i).first().getFormat(),
+                            ePairs.get(i).second()))
+                .collect(Collectors.joining(SEP));
+        IntStream.range(0, ePairs.size())
+            .forEach(
+                i -> {
+                  secondLastValues[i] = lastValues[i];
+                  lastValues[i] = values.get(i);
+                });
         if (s.isEmpty()) {
           return;
         }
@@ -126,7 +178,8 @@ public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
     return StringUtils.justify(String.format(format, currentValue), l);
   }
 
-  private String format(Object currentValue, Object lastValue, Object secondLastValue, String format, int l) {
+  private String format(
+      Object currentValue, Object lastValue, Object secondLastValue, String format, int l) {
     char currentVariation = showVariation ? StringUtils.variation(currentValue, lastValue) : ' ';
     char lastVariation = showVariation ? StringUtils.variation(lastValue, secondLastValue) : ' ';
     String s = StringUtils.justify(String.format(format, currentValue), l);
@@ -150,5 +203,4 @@ public class TabularPrinter<E, K> implements ListenerFactory<E, K> {
     }
     return s;
   }
-
 }
